Name the lock update step in GH actions
It's ugly in the UI otherwise.

--- a/.github/workflows/publish-prisma-fmt-wasm.yml
+++ b/.github/workflows/publish-prisma-fmt-wasm.yml
@@ -24,8 +24,8 @@ jobs:
       run: |
         echo $THE_INPUT
 
-    # Update the cargo hash
-    - run: |
+    - name: Update Cargo.lock and engines source hash
+      run: |
         export DATAMODEL_CHECKSUM_FILE=datamodel-0.1.0.sha256sum
 
         echo 'cargo update...'
