Simplify actions workflow
Move the lockfiles update script from yaml to the flake.

This makes the workflow clearer, puts more of the logic in one place,
and maybe most importantly makes it easier to test and iterate on
locally.

--- a/.github/workflows/publish-prisma-fmt-wasm.yml
+++ b/.github/workflows/publish-prisma-fmt-wasm.yml
@@ -20,25 +20,7 @@ jobs:
           access-tokens = github.com=${{ secrets.GITHUB_TOKEN }}
 
     - name: Update Cargo.lock and engines source hash
-      run: |
-        export DATAMODEL_CHECKSUM_FILE=datamodel-0.1.0.sha256sum
-
-        echo 'Sync wasm-bindgen version in crate with that of the installed CLI'
-        WASM_BINDGEN_CLI_VERSION=`nix run .#wasm-bindgen -- --version | awk '/wasm-bindgen/ {print $2}'`
-        sed -i "s/^wasm-bindgen\ =.*$/wasm-bindgen = \"=$WASM_BINDGEN_CLI_VERSION\"/" Cargo.toml
-
-        echo 'Run cargo update...'
-        nix run .#cargo update
-
-        echo 'Setting up fake checksum so the build can fail and output the new hash...'
-        echo 'sha256-AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA=' > \
-          $DATAMODEL_CHECKSUM_FILE
-
-        echo "Computing and inserting new datamodel checksum"
-        export DATAMODEL_CHECKSUM=`nix build 2>&1 1>&2 | awk '/got:/ {print $2}'`
-
-        echo "Installing new datamodel checksum: $DATAMODEL_CHECKSUM"
-        echo "$DATAMODEL_CHECKSUM" > $DATAMODEL_CHECKSUM_FILE
+      run: nix run .#updateLocks
 
     # Build
     - run: nix build .
