--- a/.github/workflows/publish-prisma-fmt-wasm.yml
+++ b/.github/workflows/publish-prisma-fmt-wasm.yml
@@ -40,7 +40,7 @@ jobs:
         commit_user_email: prismabots@gmail.com
         commit_author: prisma-bot <prismabots@gmail.com>
 
-    - run: npm publish result --tag $${{ github.event.inputs.enginesWrapperVersion }}
+    - run: npm publish ./result --tag $${{ github.event.inputs.enginesWrapperVersion }}
       env:
         NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
 
