--- a/.github/workflows/publish-prisma-fmt-wasm.yml
+++ b/.github/workflows/publish-prisma-fmt-wasm.yml
@@ -1,6 +1,14 @@
 name: Build and publish @prisma/prisma-fmt-wasm
 
-on: workflow_dispatch
+on:
+  workflow_dispatch:
+    inputs:
+      enginesWrapperVersion:
+        required: false
+      enginesHash:
+        required: false
+      npmDistTag:
+        required: false
 
 jobs:
   build:
@@ -22,8 +30,25 @@ jobs:
     - name: Update Cargo.lock and engines source hash
       run: nix run .#updateLocks
 
+    - name: Update NPM package version
+      run: nix run .#updateNpmPackageVersion ${{ github.event.inputs.enginesWrapperVersion }}
+
+    #
     # Build
+    #
+ 
     - run: nix build .
+
+    #
+    # Commit
+    #
+
+    - uses: stefanzweifel/git-auto-commit-action@v4
+      with:
+        commit_message: engines commit ${{ github.event.inputs.enginesHash }}
+        commit_user_name: prisma-bot
+        commit_user_email: prismabots@gmail.com
+        commit_author: prisma-bot <prismabots@gmail.com>
 
     #
     # Publish
@@ -33,14 +58,10 @@ jobs:
       with:
         node-version: '14.x'
 
-    - uses: stefanzweifel/git-auto-commit-action@v4
-      with:
-        commit_message: engines commit ${{ github.event.inputs.enginesHash }}
-        commit_user_name: prisma-bot
-        commit_user_email: prismabots@gmail.com
-        commit_author: prisma-bot <prismabots@gmail.com>
+    - name: Set up NPM token
+      run: echo "//registry.npmjs.org/:_authToken=$NPM_TOKEN" > ~/.npmrc
 
-    - run: npm publish ./result --tag $${{ github.event.inputs.enginesWrapperVersion }}
+    - run: npm publish ./result --tag ${{ github.event.inputs.npmDistTag }}
       env:
         NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
 
