Test version updates

--- a/.github/workflows/publish-prisma-fmt-wasm.yml
+++ b/.github/workflows/publish-prisma-fmt-wasm.yml
@@ -31,7 +31,9 @@ jobs:
       run: nix run .#updateLocks
 
     - name: Update NPM package version
-      run: nix run .#updateNpmPackageVersion ${{ github.event.inputs.enginesWrapperVersion }}
+      run: nix run .#updateNpmPackageVersion 0.0.1
+      # run: nix run .#updateNpmPackageVersion ${{ github.event.inputs.enginesWrapperVersion }}
+      # hardcoding the version now for testing
 
     #
     # Build
