Tag untagged releases as latest
Maybe?

--- a/.github/workflows/publish-prisma-fmt-wasm.yml
+++ b/.github/workflows/publish-prisma-fmt-wasm.yml
@@ -9,7 +9,7 @@ on:
         required: false
       npmDistTag:
         required: true
-        default: "dev"
+        default: "latest"
 
 jobs:
   build:
