--- a/.github/workflows/publish-prisma-fmt-wasm.yml
+++ b/.github/workflows/publish-prisma-fmt-wasm.yml
@@ -33,7 +33,9 @@ jobs:
     #
 
     - name: Update Cargo.lock and engines source hash
-      run: nix run .#updateLocks
+      run: |
+        enginesHash="${{ github.event.inputs.enginesHash }}"
+        nix run .#updateLocks
 
     - name: Update NPM package version
       run: |
