--- a/.github/workflows/publish-prisma-fmt-wasm.yml
+++ b/.github/workflows/publish-prisma-fmt-wasm.yml
@@ -6,7 +6,7 @@ on:
       enginesWrapperVersion:
         required: true
       enginesHash:
-        required: false
+        required: true
       npmDistTag:
         required: true
         default: "latest"
