--- a/.github/workflows/publish-prisma-fmt-wasm.yml
+++ b/.github/workflows/publish-prisma-fmt-wasm.yml
@@ -20,6 +20,12 @@ jobs:
     steps:
     - uses: actions/checkout@v2.3.4
 
+    - name: Print input
+      env:
+        THE_INPUT: '${{ toJson(github.event.inputs) }}'
+      run: |
+        echo $THE_INPUT
+
     # Install nix
     # Copy-pasted from https://github.com/marketplace/actions/install-nix
     - uses: cachix/install-nix-action@v14
