--- a/.github/workflows/update-system-dependencies.yml
+++ b/.github/workflows/update-system-dependencies.yml
@@ -45,7 +45,7 @@ jobs:
 
     - uses: stefanzweifel/git-auto-commit-action@v4
       with:
-        commit_message: engines commit ${{ github.event.inputs.enginesHash }}
+        commit_message: Update system/build dependencies
         commit_user_name: prisma-bot
         commit_user_email: prismabots@gmail.com
         commit_author: prisma-bot <prismabots@gmail.com>
