--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,6 @@ crate-type = ["cdylib"]
 [dependencies]
 wasm-bindgen = "=0.2.78"
 prisma-fmt = { git = "https://github.com/prisma/prisma-engines" }
+
+[profile.release]
+lto = true
