--- a/.github/workflows/publish-prisma-fmt-wasm.yml
+++ b/.github/workflows/publish-prisma-fmt-wasm.yml
@@ -11,92 +11,95 @@ on:
         required: true
       npmDistTag:
         required: true
-        default: "latest"
+        default: 'latest'
 
 jobs:
   build:
     name: Build and publish @prisma/prisma-fmt-wasm
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2.3.4
+      - uses: actions/checkout@v2.3.4
 
-    - name: Print input
-      env:
-        THE_INPUT: '${{ toJson(github.event.inputs) }}'
-      run: |
-        echo $THE_INPUT
+      - name: Print input
+        env:
+          THE_INPUT: '${{ toJson(github.event.inputs) }}'
+        run: |
+          echo $THE_INPUT
 
-    # Install nix
-    # Copy-pasted from https://github.com/marketplace/actions/install-nix
-    - uses: cachix/install-nix-action@v14
-      with:
-        install_url: https://nixos-nix-install-tests.cachix.org/serve/vij683ly7sl95nnhb67bdjjfabclr85m/install
-        install_options: '--tarball-url-prefix https://nixos-nix-install-tests.cachix.org/serve'
-        extra_nix_config: |
-          experimental-features = nix-command flakes
-          access-tokens = github.com=${{ secrets.GITHUB_TOKEN }}
+      # Install nix
+      # Copy-pasted from https://github.com/marketplace/actions/install-nix
+      - uses: cachix/install-nix-action@v14
+        with:
+          install_url: https://nixos-nix-install-tests.cachix.org/serve/vij683ly7sl95nnhb67bdjjfabclr85m/install
+          install_options: '--tarball-url-prefix https://nixos-nix-install-tests.cachix.org/serve'
+          extra_nix_config: |
+            experimental-features = nix-command flakes
+            access-tokens = github.com=${{ secrets.GITHUB_TOKEN }}
 
-    #
-    # Update repository for the new engines version and package version
-    #
+      #
+      # Update repository for the new engines version and package version
+      #
 
-    - name: Update Cargo.lock and engines source hash
-      run: |
-        enginesHash="${{ github.event.inputs.enginesHash }}"
-        nix run .#updateLocks
+      - name: Update Cargo.lock and engines source hash
+        run: |
+          enginesHash="${{ github.event.inputs.enginesHash }}"
+          nix run .#updateLocks
 
-    - name: Update NPM package version
-      run: |
-        ENGINES_WRAPPER_VERSION=${{ github.event.inputs.enginesWrapperVersion }};
+      - name: Update NPM package version
+        run: |
+          ENGINES_WRAPPER_VERSION=${{ github.event.inputs.enginesWrapperVersion }};
 
-        if [[ $ENGINES_WRAPPER_VERSION == '' ]]; then
-          echo "Engines wrapper version is not defined"
-          exit 1
-        fi
+          if [[ $ENGINES_WRAPPER_VERSION == '' ]]; then
+            echo "Engines wrapper version is not defined"
+            exit 1
+          fi
 
-        echo "Updating the npm package version to $ENGINES_WRAPPER_VERSION"
-        nix run .#updateNpmPackageVersion ${{ github.event.inputs.enginesWrapperVersion }}
+          echo "Updating the npm package version to $ENGINES_WRAPPER_VERSION"
+          nix run .#updateNpmPackageVersion ${{ github.event.inputs.enginesWrapperVersion }}
 
-    #
-    # Build
-    #
- 
-    - run: nix build .
+      #
+      # Build
+      #
 
-    #
-    # Publish
-    #
+      - run: nix build .
 
-    - uses: actions/setup-node@v2
-      with:
-        node-version: '14.x'
+      #
+      # Publish
+      #
 
-    - name: Set up NPM token
-      run: echo "//registry.npmjs.org/:_authToken=${{ secrets.NPM_TOKEN }}" > ~/.npmrc
+      - uses: actions/setup-node@v2
+        with:
+          node-version: '14.x'
 
-    - run: npm publish ./result --access public --tag ${{ github.event.inputs.npmDistTag }}
-      env:
-        NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+      - name: Set up NPM token
+        run: echo "//registry.npmjs.org/:_authToken=${{ secrets.NPM_TOKEN }}" > ~/.npmrc
 
-    #
-    # Commit
-    #
+      - run: npm publish ./result --access public --tag ${{ github.event.inputs.npmDistTag }}
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
 
-    - uses: stefanzweifel/git-auto-commit-action@v4
-      with:
-        commit_message: engines commit ${{ github.event.inputs.enginesHash }}
-        commit_user_name: prisma-bot
-        commit_user_email: prismabots@gmail.com
-        commit_author: prisma-bot <prismabots@gmail.com>
+      #
+      # Commit
+      #
 
-    #
-    # Failure handlers
-    #
+      - uses: stefanzweifel/git-auto-commit-action@v4
+        with:
+          commit_message: engines commit ${{ github.event.inputs.enginesHash }}
+          commit_user_name: prisma-bot
+          commit_user_email: prismabots@gmail.com
+          commit_author: prisma-bot <prismabots@gmail.com>
 
-    - name: Slack Notification on Failure
-      if: ${{ failure() }}
-      uses: rtCamp/action-slack-notify@v2.2.0
-      env:
-        SLACK_TITLE: 'prisma-fmt-wasm publishing failed :x:'
-        SLACK_COLOR: '#FF0000'
-        SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
+      #
+      # Failure handlers
+      #
+
+      - name: Set current job url in SLACK_FOOTER env var
+        run: echo "SLACK_FOOTER=<$GITHUB_SERVER_URL/$GITHUB_REPOSITORY/actions/runs/$GITHUB_RUN_ID|Click here to go to the job logs>" >> $GITHUB_ENV
+
+      - name: Slack Notification on Failure
+        if: ${{ failure() }}
+        uses: rtCamp/action-slack-notify@v2.2.0
+        env:
+          SLACK_TITLE: 'prisma-fmt-wasm publishing failed :x:'
+          SLACK_COLOR: '#FF0000'
+          SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
