--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ crate-type = ["cdylib"]
 
 [dependencies]
 wasm-bindgen = "=0.2.78"
+wasm-logger = { version = "0.2.0", optional = true }
 prisma-fmt = { git = "https://github.com/prisma/prisma-engines" }
 
 [profile.release]
