Fix gh actions workflow syntax for updateLocks

--- a/.github/workflows/publish-prisma-fmt-wasm.yml
+++ b/.github/workflows/publish-prisma-fmt-wasm.yml
@@ -34,8 +34,7 @@ jobs:
 
       - name: Update Cargo.lock and engines source hash
         run: |
-          enginesHash="${{ github.event.inputs.enginesHash }}"
-          nix run .#updateLocks
+          enginesHash="${{ github.event.inputs.enginesHash }}" nix run .#updateLocks
 
       - name: Update NPM package version
         run: |
