Rename updateLocks to updateDatamodelVersion and make it more robust
- Rename updateLocks to updateDatamodelVersion
- Stop updating other dependencies when updating datamodel dependency,
  instead do it during the weekly sunday upgrades.
- Fail hard if enginesHash is not provided.

The general aim of the PR is to isolate the failure mode in
https://github.com/prisma/prisma-fmt-wasm/issues/29 as much as possible.

--- a/.github/workflows/update-system-dependencies.yml
+++ b/.github/workflows/update-system-dependencies.yml
@@ -24,6 +24,12 @@ jobs:
       - run: 'nix run .#syncWasmBindgenVersions'
 
       #
+      # Update other crate dependencies with `cargo update`
+      #
+
+      - run: nix run .#cargo update
+
+      #
       # Build to confirm that this did not break the build.
       #
 
